Sat Jun 18 19:52:39 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/ctlib.h include/tds.h src/apps/tsql.c src/ctlib/blk.c:
	* src/ctlib/cs.c src/ctlib/ct.c src/ctlib/ctutil.c src/dblib/bcp.c:
	* src/dblib/dblib.c src/dblib/rpc.c src/odbc/convert_tds2sql.c:
	* src/odbc/odbc.c src/odbc/sql2tds.c src/pool/member.c:
	* src/tds/bulk.c src/tds/challenge.c src/tds/config.c:
	* src/tds/convert.c src/tds/data.c src/tds/gssapi.c:
	* src/tds/login.c src/tds/mem.c src/tds/net.c src/tds/query.c:
	* src/tds/read.c src/tds/token.c src/tds/vstrbuild.c:
	* src/tds/write.c:
	- new TDSRET type

Fri Jun 17 12:03:38 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/dblib/dblib.c:
	- use proper default null representation for all bind types

Thu Jun 16 15:16:23 EDT 2011	JK Lowden <jklowden@freetds.org>
	* src/dblib/dblib.c dbgetnull permits NULL dbproc

Thu Jun 16 08:56:55 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/net.c: fix compile error (patch from Jason Yanowitz)

Sat Jun 11 09:42:35 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/convert.c src/tds/numeric.c:
	- do not mix conversion results with normal ones

Sat Jun 11 08:35:17 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/bulk.c src/tds/query.c: fix some returns

Fri Jun 10 19:51:47 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h include/tdsodbc.h src/apps/tsql.c src/ctlib/ct.c:
	* src/dblib/dblib.c src/odbc/connectparams.c src/odbc/odbc.c:
	* src/pool/member.c src/tds/challenge.c src/tds/config.c:
	* src/tds/gssapi.c src/tds/login.c src/tds/mem.c src/tds/net.c:
	* src/tds/sspi.c src/tds/token.c src/tds/unittests/common.c:
	* win32/winlogin.c win32/winsetup.c:
	- unify TDSCONNECTION and TDSLOGIN

Thu Jun  9 15:04:09 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/dblib/bcp.c: bcp style update

Wed Jun  8 11:35:17 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/net.c: net cleanup
