@@ -1,3 +1,6 @@
+Wed Jun 29 09:06:46 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
+	* src/tds/net.c: disable ssl padding for compatibility
+
 Sat Jun 18 19:52:39 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
 	* include/ctlib.h include/tds.h src/apps/tsql.c src/ctlib/blk.c:
 	* src/ctlib/cs.c src/ctlib/ct.c src/ctlib/ctutil.c src/dblib/bcp.c:
@@ -472,4 +475,4 @@ Sat Apr  9 16:15:00 EDT 2011	JK Lowden <jklowden@freetds.org>
 	* ChangeLog-0.91 added because of release
 
 $FreeTDS$
-$Id: ChangeLog,v 1.3307 2011/06/18 17:52:24 freddy77 Exp $
+$Id: ChangeLog,v 1.3308 2011/06/29 07:08:39 freddy77 Exp $
